[workspace]
resolver = "2"
members = [
    "snarkd_common",
    "snarkd_crypto",
    "snarkd_errors",
    "snarkd_ir",
    "snarkd_network",
    "snarkd_node",
    "snarkd_storage",
    "snarkd_peer",
]

[workspace.dependencies]
always_cell = "0.1"
anyhow = "=1.0.65"
arc-swap = "1.0"
async-trait = "0.1"
bech32 = "0.9.1"
bitvec = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
dashmap = "5.4"
env_logger = "0.9"
error-stack = "0.2"
fxhash = "0.2.1"
hashbrown = "0.12"
hex = "0.4"
indexmap = { version = "1.9.1", features = ["serde"] }
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
num-bigint = "0.4"
num_enum = "0.5.7"
parking_lot = "0.12"
prost = "0.11.0"
prost-build = "0.11.1"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
rand_xorshift = "0.3"
rayon = "1.5"
ruint = { version = "1.7", features = ["rand"] }
refinery = { version = "0.8.6", features = [
    "rusqlite-bundled",
], git = "https://github.com/rust-db/refinery.git" }
rusqlite = { version = "0.28", features = ["bundled"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
sha2 = { version = "0.10", default-features = false }
smallvec = "1.10"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
# we need a new release for rusqlite 0.28 support
tokio-rusqlite = "0.3.0"
uuid = { version = "1.2", features = ["serde", "v4"] }

snarkd_common = { path = "./snarkd_common" }
snarkd_errors = { path = "./snarkd_errors" }

[profile.test]
opt-level = 3
lto = true
debug-assertions = true
