[package]
name = "snarkd_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
snarkd_client = { workspace = true }
snarkd_common = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
