[package]
name = "snarkd_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
snarkd_client = { workspace = true }
snarkd_common = { workspace = true }
tokio = { workspace = true }
tui = { version = "0.19.0" }
url = { workspace = true }
