[package]
name = "snarkd_common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
smallvec = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
arc-swap = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
serde_yaml = { workspace = true }
snarkd_peer = { workspace = true, features = [
  "config",
], default-features = false }
rusqlite = { workspace = true, optional = true }
indexmap = "1.9"
sha2 = "0.10"
