[package]
name = "snarkd_common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
indexmap = "1.9"
lazy_static = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true, optional = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sha2 = "0.10"
smallvec = { workspace = true }
url = { workspace = true }
snarkd_crypto = { path = "../snarkd_crypto" }
