[package]
name = "snarkd_consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
smallvec = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
indexmap = { workspace = true }
rayon = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
metrics = { workspace = true }

snarkd_common = { workspace = true }
snarkd_crypto = { workspace = true }
snarkd_storage = { workspace = true }
