[package]
name = "snarkd_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bitvec = { workspace = true }
fxhash = { workspace = true }
hashbrown = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
num-bigint = { workspace = true }
num_cpus = "1.0"
parking_lot = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rand_xorshift = { workspace = true }
rayon = { workspace = true }
ruint = { workspace = true, features = ["arbitrary"] }
rusqlite = { workspace = true }
# uses arbitrary for cargo-fuzz
serde = { workspace = true }
smallvec = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
# used for cargo-fuzz
arbitrary = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
ruint = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
test-runner = { workspace = true }
