[package]
name = "snarkd_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bitvec = { workspace = true }
blake2 = { workspace = true }
fxhash = { workspace = true }
hashbrown = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
num_cpus = "1.0"
parking_lot = {workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rand_xorshift = { workspace = true }
rayon = { workspace = true }
ruint = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
