[package]
name = "snarkd_ir"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bech32 = { workspace = true }
indexmap = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
snarkd_errors = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
