[package]
name = "snarkd_network"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }

snarkd_common = { path = "../snarkd_common" }
# snarkd_errors = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
