[package]
name = "snarkd_network"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
dashmap = { workspace = true }

snarkd_common = { path = "../snarkd_common" }

[build-dependencies]
prost-build = { workspace = true }
