[package]
name = "snarkd_node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snarkd"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
arc-swap = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
itertools = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
always_cell = { workspace = true }

snarkd_common = { path = "../snarkd_common" }
snarkd_storage = { path = "../snarkd_storage" }
snarkd_network = { path = "../snarkd_network" }
snarkd_peer = { path = "../snarkd_peer" }
