[package]
name = "snarkd_node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snarkd"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
itertools = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
always_cell = { workspace = true }

snarkd_common = { workspace = true }
snarkd_storage = { workspace = true }
snarkd_network = { workspace = true }
snarkd_peer = { workspace = true }
snarkd_rpc = { workspace = true, features = ["server"] }
