[package]
name = "snarkd_node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snarkd"
path = "src/main.rs"

[dependencies]
always_cell = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
env_logger = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }

snarkd_common = { workspace = true }
snarkd_network = { workspace = true }
snarkd_peer = { workspace = true }
snarkd_rpc = { workspace = true, features = ["server"] }
snarkd_storage = { workspace = true }
snarkd_consensus = { workspace = true }
snarkd_crypto = { workspace = true }
