[package]
name = "snarkd_peer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
bip_bencode = "0.4.4"
hex = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
reqwest = { version = "0.11.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
