[package]
name = "snarkd_peer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bip_bencode = { version = "0.4.4" }
hex = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
reqwest = { version = "0.11.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
snarkd_common = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
