[package]
name = "snarkd_rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
jsonrpsee = { version = "0.15.1", default-features = false }
serde = { workspace = true }
snarkd_common = { workspace = true }
snarkd_storage = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[features]
default = ["client", "server"]
client = ["jsonrpsee/client", "jsonrpsee/client-ws-transport"]
server = ["jsonrpsee/server", "jsonrpsee/macros"]
