[package]
name = "snarkd_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { workspace = true }
tokio = { workspace = true }
# we need a new release for rusqlite 0.28 support
refinery = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
log = { workspace = true }

snarkd_common = { path = "../snarkd_common", features = ["rusqlite"] }
snarkd_crypto = { path = "../snarkd_crypto" }
