[package]
name = "snarkd_crypto-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
snarkd_crypto = { path = "..", features = ["fuzz"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fp"
path = "fuzz_targets/bls12_377/fp.rs"
test = false
doc = false

[[bin]]
name = "fp2"
path = "fuzz_targets/bls12_377/fp2.rs"
test = false
doc = false

[[bin]]
name = "fp6"
path = "fuzz_targets/bls12_377/fp6.rs"
test = false
doc = false

[[bin]]
name = "fp12"
path = "fuzz_targets/bls12_377/fp12.rs"
test = false
doc = false
[[bin]]
name = "g1"
path = "fuzz_targets/bls12_377/g1.rs"
test = false
doc = false

[[bin]]
name = "g2"
path = "fuzz_targets/bls12_377/g2.rs"
test = false
doc = false

[[bin]]
name = "mod"
path = "fuzz_targets/bls12_377/mod.rs"
test = false
doc = false

[[bin]]
name = "scalar"
path = "fuzz_targets/bls12_377/scalar.rs"
test = false
doc = false

[[bin]]
name = "sw_affine_g1"
path = "fuzz_targets/bls12_377/sw_affine_g1.rs"
test = false
doc = false


[[bin]]
name = "sw_affine_g2"
path = "fuzz_targets/bls12_377/sw_affine_g2.rs"
test = false
doc = false

[[bin]]
name = "sw_projective_g1"
path = "fuzz_targets/bls12_377/sw_projective_g1.rs"
test = false
doc = false

[[bin]]
name = "sw_projective_g2"
path = "fuzz_targets/bls12_377/sw_projective_g2.rs"
test = false
doc = false

[[bin]]
name = "add_g1"
path = "fuzz_targets/bls12_377/projective/add_g1.rs"
test = false
doc = false

[[bin]]
name = "add_g2"
path = "fuzz_targets/bls12_377/projective/add_g2.rs"
test = false
doc = false

[[bin]]
name = "mul_g1"
path = "fuzz_targets/bls12_377/projective/mul_g1.rs"
test = false
doc = false

[[bin]]
name = "mul_g2"
path = "fuzz_targets/bls12_377/projective/mul_g2.rs"
test = false
doc = false

[[bin]]
name = "double_g1"
path = "fuzz_targets/bls12_377/projective/double_g1.rs"
test = false
doc = false

[[bin]]
name = "double_g2"
path = "fuzz_targets/bls12_377/projective/double_g2.rs"
test = false
doc = false

[[bin]]
name = "neg_g1"
path = "fuzz_targets/bls12_377/projective/neg_g1.rs"
test = false
doc = false

[[bin]]
name = "neg_g2"
path = "fuzz_targets/bls12_377/projective/neg_g2.rs"
test = false
doc = false

[[bin]]
name = "transform_g1"
path = "fuzz_targets/bls12_377/projective/transform_g1.rs"
test = false
doc = false

[[bin]]
name = "transform_g2"
path = "fuzz_targets/bls12_377/projective/transform_g2.rs"
test = false
doc = false

[[bin]]
name = "batch_normalization_g1"
path = "fuzz_targets/bls12_377/projective/batch_normalization_g1.rs"
test = false
doc = false

[[bin]]
name = "batch_normalization_g2"
path = "fuzz_targets/bls12_377/projective/batch_normalization_g2.rs"
test = false
doc = false

[[bin]]
name = "projective_glv_g1"
path = "fuzz_targets/bls12_377/projective/projective_glv_g1.rs"
test = false
doc = false

[[bin]]
name = "neg_fp"
path = "fuzz_targets/bls12_377/field/neg_fp.rs"
test = false
doc = false

[[bin]]
name = "neg_fp2"
path = "fuzz_targets/bls12_377/field/neg_fp2.rs"
test = false
doc = false

[[bin]]
name = "neg_fp6"
path = "fuzz_targets/bls12_377/field/neg_fp6.rs"
test = false
doc = false

[[bin]]
name = "neg_fp12"
path = "fuzz_targets/bls12_377/field/neg_fp12.rs"
test = false
doc = false

[[bin]]
name = "neg_scalar"
path = "fuzz_targets/bls12_377/field/neg_scalar.rs"
test = false
doc = false

[[bin]]
name = "add_fp"
path = "fuzz_targets/bls12_377/field/add_fp.rs"
test = false
doc = false

[[bin]]
name = "add_fp2"
path = "fuzz_targets/bls12_377/field/add_fp2.rs"
test = false
doc = false

[[bin]]
name = "add_fp6"
path = "fuzz_targets/bls12_377/field/add_fp6.rs"
test = false
doc = false

[[bin]]
name = "add_fp12"
path = "fuzz_targets/bls12_377/field/add_fp12.rs"
test = false
doc = false

[[bin]]
name = "add_scalar"
path = "fuzz_targets/bls12_377/field/add_scalar.rs"
test = false
doc = false

[[bin]]
name = "sub_fp"
path = "fuzz_targets/bls12_377/field/sub_fp.rs"
test = false
doc = false

[[bin]]
name = "sub_fp2"
path = "fuzz_targets/bls12_377/field/sub_fp2.rs"
test = false
doc = false

[[bin]]
name = "sub_fp6"
path = "fuzz_targets/bls12_377/field/sub_fp6.rs"
test = false
doc = false

[[bin]]
name = "sub_fp12"
path = "fuzz_targets/bls12_377/field/sub_fp12.rs"
test = false
doc = false

[[bin]]
name = "sub_scalar"
path = "fuzz_targets/bls12_377/field/sub_scalar.rs"
test = false
doc = false

[[bin]]
name = "mul_fp"
path = "fuzz_targets/bls12_377/field/mul_fp.rs"
test = false
doc = false

[[bin]]
name = "mul_fp2"
path = "fuzz_targets/bls12_377/field/mul_fp2.rs"
test = false
doc = false

[[bin]]
name = "mul_fp6"
path = "fuzz_targets/bls12_377/field/mul_fp6.rs"
test = false
doc = false

[[bin]]
name = "mul_fp12"
path = "fuzz_targets/bls12_377/field/mul_fp12.rs"
test = false
doc = false

[[bin]]
name = "mul_scalar"
path = "fuzz_targets/bls12_377/field/mul_scalar.rs"
test = false
doc = false

[[bin]]
name = "inversion_fp"
path = "fuzz_targets/bls12_377/field/inversion_fp.rs"
test = false
doc = false

[[bin]]
name = "inversion_fp2"
path = "fuzz_targets/bls12_377/field/inversion_fp2.rs"
test = false
doc = false

[[bin]]
name = "inversion_fp6"
path = "fuzz_targets/bls12_377/field/inversion_fp6.rs"
test = false
doc = false

[[bin]]
name = "inversion_fp12"
path = "fuzz_targets/bls12_377/field/inversion_fp12.rs"
test = false
doc = false

[[bin]]
name = "inversion_scalar"
path = "fuzz_targets/bls12_377/field/inversion_scalar.rs"
test = false
doc = false

[[bin]]
name = "double_fp"
path = "fuzz_targets/bls12_377/field/double_fp.rs"
test = false
doc = false

[[bin]]
name = "double_fp2"
path = "fuzz_targets/bls12_377/field/double_fp2.rs"
test = false
doc = false

[[bin]]
name = "double_fp6"
path = "fuzz_targets/bls12_377/field/double_fp6.rs"
test = false
doc = false

[[bin]]
name = "double_fp12"
path = "fuzz_targets/bls12_377/field/double_fp12.rs"
test = false
doc = false

[[bin]]
name = "double_scalar"
path = "fuzz_targets/bls12_377/field/double_scalar.rs"
test = false
doc = false

[[bin]]
name = "square_fp"
path = "fuzz_targets/bls12_377/field/square_fp.rs"
test = false
doc = false

[[bin]]
name = "square_fp2"
path = "fuzz_targets/bls12_377/field/square_fp2.rs"
test = false
doc = false

[[bin]]
name = "square_fp6"
path = "fuzz_targets/bls12_377/field/square_fp6.rs"
test = false
doc = false

[[bin]]
name = "square_fp12"
path = "fuzz_targets/bls12_377/field/square_fp12.rs"
test = false
doc = false

[[bin]]
name = "square_scalar"
path = "fuzz_targets/bls12_377/field/square_scalar.rs"
test = false
doc = false

[[bin]]
name = "expansion_fp"
path = "fuzz_targets/bls12_377/field/expansion_fp.rs"
test = false
doc = false

[[bin]]
name = "expansion_fp2"
path = "fuzz_targets/bls12_377/field/expansion_fp2.rs"
test = false
doc = false

[[bin]]
name = "expansion_fp6"
path = "fuzz_targets/bls12_377/field/expansion_fp6.rs"
test = false
doc = false

[[bin]]
name = "expansion_fp12"
path = "fuzz_targets/bls12_377/field/expansion_fp12.rs"
test = false
doc = false

[[bin]]
name = "expansion_scalar"
path = "fuzz_targets/bls12_377/field/expansion_scalar.rs"
test = false
doc = false

[[bin]]
name = "sqrt_fp"
path = "fuzz_targets/bls12_377/field/sqrt_fp.rs"
test = false
doc = false

[[bin]]
name = "sqrt_fp2"
path = "fuzz_targets/bls12_377/field/sqrt_fp2.rs"
test = false
doc = false

[[bin]]
name = "sqrt_scalar"
path = "fuzz_targets/bls12_377/field/sqrt_scalar.rs"
test = false
doc = false

[[bin]]
name = "pow_fp"
path = "fuzz_targets/bls12_377/field/pow_fp.rs"
test = false
doc = false

[[bin]]
name = "pow_fp2"
path = "fuzz_targets/bls12_377/field/pow_fp2.rs"
test = false
doc = false

[[bin]]
name = "pow_fp6"
path = "fuzz_targets/bls12_377/field/pow_fp6.rs"
test = false
doc = false

[[bin]]
name = "pow_fp12"
path = "fuzz_targets/bls12_377/field/pow_fp12.rs"
test = false
doc = false

[[bin]]
name = "pow_scalar"
path = "fuzz_targets/bls12_377/field/pow_scalar.rs"
test = false
doc = false

[[bin]]
name = "sum_of_products_fp"
path = "fuzz_targets/bls12_377/field/sum_of_products_fp.rs"
test = false
doc = false

[[bin]]
name = "sum_of_products_fp2"
path = "fuzz_targets/bls12_377/field/sum_of_products_fp2.rs"
test = false
doc = false

[[bin]]
name = "sum_of_products_fp6"
path = "fuzz_targets/bls12_377/field/sum_of_products_fp6.rs"
test = false
doc = false

[[bin]]
name = "sum_of_products_fp12"
path = "fuzz_targets/bls12_377/field/sum_of_products_fp12.rs"
test = false
doc = false

[[bin]]
name = "sum_of_products_scalar"
path = "fuzz_targets/bls12_377/field/sum_of_products_scalar.rs"
test = false
doc = false

[[bin]]
name = "math_properties_fp"
path = "fuzz_targets/bls12_377/field/math_properties_fp.rs"
test = false
doc = false

[[bin]]
name = "math_properties_fp2"
path = "fuzz_targets/bls12_377/field/math_properties_fp2.rs"
test = false
doc = false

[[bin]]
name = "math_properties_fp6"
path = "fuzz_targets/bls12_377/field/math_properties_fp6.rs"
test = false
doc = false

[[bin]]
name = "math_properties_fp12"
path = "fuzz_targets/bls12_377/field/math_properties_fp12.rs"
test = false
doc = false

[[bin]]
name = "math_properties_scalar"
path = "fuzz_targets/bls12_377/field/math_properties_scalar.rs"
test = false
doc = false

[[bin]]
name = "mul_by_1_fp6"
path = "fuzz_targets/bls12_377/field/mul_by_1_fp6.rs"
test = false
doc = false

[[bin]]
name = "mul_by_01_fp6"
path = "fuzz_targets/bls12_377/field/mul_by_01_fp6.rs"
test = false
doc = false

[[bin]]
name = "mul_by_014_fp12"
path = "fuzz_targets/bls12_377/field/mul_by_014_fp12.rs"
test = false
doc = false

[[bin]]
name = "mul_by_034_fp12"
path = "fuzz_targets/bls12_377/field/mul_by_034_fp12.rs"
test = false
doc = false