[package]
name = "test-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snarkd_crypto = { workspace = true }
test-runner = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }